--- a/BookTracker.vcxproj
+++ b/BookTracker.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
